some list added

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     <h1>This is beta version</h1>
     <p>More Code Added</p>
     <p>Address Changed</p>
+    <ul>
+        <li>one</li>
+        <li>Two</li>
+        <li>Three</li>
+    </ul>
 </body>
 </html>
