--- a/index.html
+++ b/index.html
@@ -6,14 +6,8 @@
     <title>My App</title>
 </head>
 <body>
-    <h1>This is beta version</h1>
-    <p>More Code Added</p>
-    <p>Address Changed</p>
-    <ul>
-        <li>one</li>
-        <li>Two</li>
-        <li>Three</li>
-    </ul>
-    <h1>Final Release</h1>
+    <h1 style="color: red;">
+        Stable Version V1.0.1
+    </h1>
 </body>
 </html>
